--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,18 @@ dependencies:
   flutter_bloc: ^8.1.6
   firebase_auth: ^5.1.0
   flutter_spinbox: ^0.13.1
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
