Minor changes in student page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,7 @@ flutter:
     - assets/loginImage.png
     - assets/logo.png
     - assets/studentImage.jpg
-
+    - assets/profile_picture.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
