--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_auth: ^5.1.0
   flutter_spinbox: ^0.13.1
   flutter_launcher_icons: ^0.13.1
+  firebase_database: ^11.0.1 
+  firebase_storage:
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
