--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   bloc: ^8.0.0
   meta: ^1.7.0
   provider: ^6.0.0
+  qr_code_scanner: ^1.0.1
 
 
 dev_dependencies:
@@ -83,7 +84,7 @@ flutter:
     - assets/loginImage.png
     - assets/logo.png
     - assets/studentImage.jpg
-    - assets/profile_picture.jpeg
+    - assets/profile_picture.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
