--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   share: ^2.0.4
   screenshot: ^3.0.0
   shared_preferences: ^2.2.3
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
